Taoyuan County became Taoyuan City since 2014/12/25.

--- a/LocalData/AllCounties.plist
+++ b/LocalData/AllCounties.plist
@@ -5,7 +5,7 @@
 	<string>基隆市</string>
 	<string>臺北市</string>
 	<string>新北市</string>
-	<string>桃園縣</string>
+	<string>桃園市</string>
 	<string>新竹縣</string>
 	<string>新竹市</string>
 	<string>苗栗縣</string>
