--- a/LocalData/ZIPCode.plist
+++ b/LocalData/ZIPCode.plist
@@ -59,7 +59,7 @@
 		<string>207</string>		
 		<string>233</string>		
 	</array>
-	<key>桃園縣</key>
+	<key>桃園市</key>
 	<array>
 		<string>330</string>
 		<string>320</string>
